style: fix strong color in dark mode

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -629,6 +629,10 @@ a.pagination-item:hover {
   tbody tr:nth-child(odd) th {
     background-color: #323232;
   }
+
+  strong {
+    color: #ffffff;
+  }
 }
 
 #results-container {
